--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -236,7 +236,6 @@ hu = Hungarian
 it = Italian
 ja = Japanese
 lt = Lithuanian
-mk = Macedonian
 nl = Dutch
 nn = Norwegian
 pl = Polish
@@ -414,3 +413,4 @@ was = was
 were = were
 yes = Yes
 zipexport = ZIP
+neverdue = Never due
