--- a/language/pt/lng.conf
+++ b/language/pt/lng.conf
@@ -5,7 +5,7 @@ all = Todos
 avatar = Avatar
 cellphone = Telemóvel
 changepassword = Alterar password
-chatwith = Iniciar conversa com
+chatwith = Conversar com
 city = Localidade
 client = Cliente
 company = Empresa
@@ -30,6 +30,7 @@ male = Masculino
 members = Membros
 myaccount = Minha conta
 newpass = Nova password
+none = Nenhum
 oldpass = Password actual
 password = Password
 phone = Telefone
@@ -51,9 +52,13 @@ userwasedited = Utilizador editado
 vcardexport = vCard
 welcomeback = Bem-vindo
 zip = Código Postal
+
+{* Project *}
+
 access = Acesso
 addproject = Adicionar projecto
 assignto = Atribuir a
+budget = Budget
 closedprojects = Projectos fechados
 deassign = Remover
 description = Descrição
@@ -73,6 +78,9 @@ projectwasedited = Projecto editado
 projectwasopened = Projecto aberto
 report = Relatório
 start = Início
+
+{* Task / Tasklist *}
+
 addtask = Adicionar tarefa
 addtasklist = Adicionar checklist
 assign = Assignar
@@ -85,7 +93,7 @@ edittasklist = Editar checklist
 latetasks = Tarefas atrasadas
 mytasks = Minhas tarefas
 newtasks = Novas tarefas
-notasklists = Lista de tarefas pendentes
+notasklists = Sem tarefas
 notasks = Nenhuma tarefa pendente
 openprogress = Aberto
 status = Status
@@ -106,7 +114,10 @@ taskwasdeleted = Tarefa removida
 taskwasedited = Tarefa editada
 taskwasopened = Tarefa aberta
 text = Texto
-todaytasks = Tarefas do dia
+todaytasks = Tarefas de Hoje
+
+{* Milestone *}
+
 addmilestone = Adicionar meta
 donemilestones = Metas atingidas
 due = Data
@@ -122,6 +133,9 @@ milestonewasedited = Meta editada
 milestonewasopened = Meta aberta
 newmilestones = Novas metas
 todaystones = Metas de hoje
+
+{* Messages *}
+
 addmessage = Adicionar mensagem
 answer = Pergunta
 editmessage = Editar mensagem
@@ -130,8 +144,8 @@ messages = Mensagens
 messagewasadded = Mensagem adicionada
 messagewasdeleted = Mensagem removida
 messagewasedited = Mensagem editada
-messagewasaddedsubject = Nova mensagem
-messagewasaddedtext = Mensagem:
+messagewasaddedsubject = Mensagem adicionada
+messagewasaddedtext = A sua mensagem foi adicionada com sucesso
 mymessages = Minhas Mensagens
 replies = Respostas
 reply = Responder
@@ -139,21 +153,27 @@ replywasadded = Resposta adicionada
 replywasdeleted = Resposta removida
 replywasedited = Resposta alterada
 title = Título
+
+{* eMails *}
+
 mailfrommail = E-mail de Remetente
 mailfromname = Nome de Remetente
 mailmethod = Método
 mailserver = Servidor
 mailusername = Username
 mailpass = Password
-profileaddedsubject = Foi-lhe criado um novo Perfil
-profileaddedtext = Os dados do seu perfil sao: 
+profileaddedsubject = Collabtive notificação – Criação de Utilizador
+profileaddedtext = Um novo perfil de utilizador criado com sucesso. Por favor, mude sua password após o primeiro login, por razões de segurança!
 profilepass = Password
 profileusername = Nome de Utilizador
 hello = Olá
-projectassignedsubject = Foi adicionado a um novo Projecto
-projectassignedtext = Para aceder ao seu novo projecto clique no seguinte link: 
-taskassignedsubject = Foi criada uma nova tarefa para si
-taskassignedtext = Foi-lhe associada uma nova tarefa. Para a visualizar clique em: 
+projectassignedsubject = Collabtive Notificação – Projecto atribuído
+projectassignedtext = Um novo projecto foi lhe atribuído:
+taskassignedsubject = Collabtive Notificação – Nova tarefa atribuída
+taskassignedtext = Uma nova tarefa foi lhe atribuída:
+
+{* Files *}
+
 addfile = Adicionar ficheiro
 addfiles = Adicionar ficheiros
 addfolder = Adicionar pasta
@@ -166,8 +186,8 @@ editfile = Editar ficheiro
 editfolder = Editar pasta
 file = Ficheiro
 files = Ficheiros
-filecreatedsubject = Novo ficheiro criado
-filecreatedtext = Novo ficheiro criado: 
+filecreatedsubject = Collabtive Notificação – Ficheiro adicionado
+filecreatedtext = Foi adicionado um ficheiro a um dos seus projectos
 filewasadded = Ficheiro adicionado
 filewasdeleted = Ficheiro removido
 filewasedited = Ficheiro editado
@@ -177,9 +197,14 @@ folderwasdeleted = Pasta apagada
 folderwasedited = Pasta editada com sucesso
 managefolders = Gerir pastas
 maxsize = Tamanho máximo
+parent = Parent folder
 rootdir = Directório Principal
+visibility = Visível por
+
+{* Search *}
+
 advancedsearch = Pesquisa avançada
-didyoumean = Pretendia dizer
+didyoumean = Pretendeu dizer
 gosearch = Pesquisar
 newsearch = Nova pesquisa
 noresults = Não obteve resultados.
@@ -190,6 +215,10 @@ search = Pesquisar
 searchfor = Pesquisar por
 searching = A Pesquisar...
 searchitem = Pesquisar item
+
+{* Languages *}
+
+al = Albanês
 ar = Arabe
 bg = Búlgaro
 ca = Catalão
@@ -199,25 +228,29 @@ da = Dinamarquês
 de = Alemão
 en = Inglês
 es = Espanhol
-gl = Galego
 fi = Finlandês
 fr = Francês
+gl = Galego
 hu = Húngaro
 it = Italiano
 ja = Japonês
 lt = Lituano
 nl = Holandês
-nn = nn_text
+nn = Norueguês
 pl = Polonês
 pt = Português
 pt_br = Português (Brasil)
 ro = Romeno
-sr = Sérvio
 ru = Russo
+sr = Sérvio
 se = Suéco
 sk = Eslovaco
 tr = Turco
 uk = Ucraniano
+zh = Chinese
+
+{* Calendar *}
+
 calendar = Calendário
 dateformat = Formato de data
 timezone = Fuso horário
@@ -242,6 +275,9 @@ september = Setembro
 october = Outubro
 november = Novembro
 december = Dezembro
+
+{* Errors *}
+
 accessdenied = Acesso negado
 confirmdel = Remover item ?\nA acção não poderá ser desfeita.
 error = Erro
@@ -251,6 +287,9 @@ notyourproject = Você não pertence a este projecto
 wrongfield = Entre com um valor válido para \"%FIELDNAME%\"
 wrongfields = Entre com valores válidos para:\n\n
 wrongselect = Seleccione um valor válido em \"%FIELDNAME%\"
+
+{* Installation *}
+
 createadmin = Crie o primeiro utilizador. Este utilizador será o administrador e não poderá ser eliminado.
 clickcontinue = Clique em "continuar" para prosseguir a instalação.
 continue = Continuar
@@ -272,6 +311,11 @@ makedirwritable = tornar o directório editável
 makefilewritable = tornar o ficheiro editável
 phpversion = é necessário no mínimo PHP 5.1
 proceedtologin = Continuar para Login
+mb_string_enabled = extensão mb_string carregada
+enable_mb_string = Por favor, habilite a extensão mb_string
+
+{* Timetracker *}
+
 comment = Comentário
 edittimetracker = Alterar entrada
 endafterstart = A data de fim deve ser posterior ao início
@@ -281,12 +325,16 @@ filterreport = Filtrar Relatório
 hours = Horas
 inserttime = Inserir hora actual
 noassociatedtask = Nenhuma tarefa associada
+report = relatório
 reporting = Reportar
 started = Início
 totalhours = Total de horas
 timetable = Calendário
 timetracker = Registo de Tempo
 timetrackeradded = Registo de tempo criado
+
+{* Roles / Permissions *}
+
 add = Adicionar
 addrole = Adicionar papel
 delete = Remover
@@ -296,10 +344,13 @@ editrole = Editar papel
 permissionread = Ler
 permissions = Permissões
 permissionswereedited = Permissões alteradas
-role = Perfil
-roleadded = Perfil adicionado
-roleedited = Perfil actualizado
-roles = Perfis
+role = Papel
+roleadded = Papel adicionado
+roleedited = Papel editado
+roles = Papeis
+
+{* Miscellaneous *}
+
 active = Activo
 activity = Actividades
 action = Acção
@@ -325,12 +376,14 @@ edited = Editado
 excelexport = Excel
 export = Exportar
 favicon = Icon favorito
+general = Geral
 help = Ajuda
 icalexport = iCal
-import = Importar
+import = Importar de Basecamp
 importsuccess = Importação bem sucessida
 inactive = Inactivo
 no = Não
+notify = Notificar
 objoff = Inactivo
 objon = Activo
 on = Criado
@@ -347,17 +400,15 @@ rssuser = Nome de utilizador RSS
 send = Enviar
 settings = Configurações
 settingschanged = Configurações alteradas
-settingsedited = Configurações actualizadas
+settingsedited = Configurações editadas
 showall = Mostrar tudo
+started = Iniciado
 subtitle = Legenda
 systemadministration = Administração do Sistema
-systemdefault = Padrão
+systemdefault = Default
 systemsounds = Sons do Sistema
 tags = Tags
 was = foi
 were = foram
 yes = Sim
 zipexport = ZIP
-budget = Orçamento
-visibility = Visivel para
-notify = Notificar
