Added strings for "hr" / Croatian, and "neverdue" in Portuguese

--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -65,6 +65,7 @@ description = Description
 editproject = Edit project
 myprojects = My projects
 name = Name
+neverdue = Never due
 noprojects = No projects found.
 openprojects = Open projects
 project = Project
@@ -232,6 +233,7 @@ fa = Farsi
 fi = Finnish
 fr = French
 gl = Galician
+hr = Croatian
 hu = Hungarian
 it = Italian
 ja = Japanese
@@ -413,4 +415,3 @@ was = was
 were = were
 yes = Yes
 zipexport = ZIP
-neverdue = Never due
