--- a/language/pt/lng.conf
+++ b/language/pt/lng.conf
@@ -65,6 +65,7 @@ description = Descrição
 editproject = Editar projecto
 myprojects = Meus projetos
 name = Nome
+neverdue = Nunca expira
 noprojects = Nenhum projecto encontrado.
 openprojects = Projectos abertos
 project = Projecto
@@ -231,6 +232,7 @@ es = Espanhol
 fi = Finlandês
 fr = Francês
 gl = Galego
+hr =
 hu = Húngaro
 it = Italiano
 ja = Japonês
