Lithuanian translation completed by dezigner

--- a/language/lt/lng.conf
+++ b/language/lt/lng.conf
@@ -1,228 +1,268 @@
+/*
+Credits:
+Arūnas Simonaitis - arunas@simonaitis.lt
+*/
 address = Adresas
-adduser = Pridėti narį
+adduser = Pridėti vartotoją
 admin = Administratorius
 all = Visi
-avatar = Portretas
-cellphone = 
-changepassword = Pakeisti slaptažodį
-chatwith = Kalbėtis su
-city = 
-client = Klientas
+avatar = Avataras
+cellphone = Mobilusis telefonas 
+changepassword = Keisti slaptažodį 
+chatwith = Kalbėkite su 
+city = Miestas 
+client = Klientas 
 company = Kompanija
-confirmlogout = 
-contact = Kontaktai
+confirmlogout = Atsijungti? 
+contact = Kontaktai 
 country = Šalis
-deassignuser = 
-deleteform = Reassign this user's tasks?
-deleteuser = Šalinti narį
-edituser = Redaguoti narį
+deassignuser = Atjungti vartotoją
+deleteform = Atjungti vartotojo užduotis?
+deleteuser = Ištrinti vartotoją
+edituser = Redaguoti varotojo info
 email = El. paštas
 female = Moteris
-firstname = 
+firstname = Vardas
 gender = Lytis
 lastlogin = Aktyvumas
-locale = Lokalė
+locale = Kalba
 login = Prisijungti
 loginbutton = Prisijungti
-loginerror = Jūs neprisijungęs.<br />Prašome pasitikrinti ar teisingi duomenys.
+loginerror = Jūs neprisijungęs <br /> Prašome patikrinti savo prisijungimo duomenis.
 logout = Atsijungti
 male = Vyras
-members = Žmonės
-myaccount = Mano paskyra
+members = Vartotojai
+myaccount = Mano sąskaita
 newpass = Naujas slaptažodis
+none = Nėra
 oldpass = Senas slaptažodis
 password = Slaptažodis
-phone = 
-rate = 
-repeatpass = Pakartokite slaptažodį
+phone = Telefonas
+rate = Valandinis įkainis
+repeatpass = Pakartoti slaptažodį
 state = Valstija
 stayloggedin = Likti prisijungus
 template = Šablonas
-url = URL
-user = Narys
-useradministration = Narių administravimas
-userprofile = Nario profilis
-usersonline = Narys prisijungęs
-userwasadded = Narys pridėtas
-userwasassigned = Narys buvo priskirtas
-userwasdeassigned = Narys atskirtas
-userwasdeleted = Narys pašalintas
-userwasedited = Narys buvo redaguotas
-vcardexport = V-card eksportas
+url = Interneto svetainė
+user = Vartotojas
+useradministration = Vartotojų administracija
+userprofile = Vartotojo profilis
+usersonline = Dabar naršo
+userwasadded = Vartotojas pridėtas
+userwasassigned = Vartotojo paskirtas
+userwasdeassigned = Vartotojas nepriskirtas
+userwasdeleted = Vartotojas ištrintas
+userwasedited = Vartotojas buvo redaguotas
+vcardexport = vKortelė
 welcomeback = Sveiki sugrįžę
 zip = Pašto kodas
-access = Leidimas
-addproject = Pridėti projektą
+
+{* Project *}
+
+access = Prieiga
+addproject = Pridėto projektą
 assignto = Priskirti
-closedprojects = Uždaryti projektai
-deassign = Atskirti
+budget = Biudžetas
+closedprojects = Baigti projektai
+deassign =  Nuimti priskyrimą
 description = Aprašymas
 editproject = Redaguoti projektą
 myprojects = Mano projektai
-name = Vardas/Pavadinimas
-noprojects = Projektų nerasta.
-openprojects = Akyvūs projektai
+name = Vardas
+neverdue = Be pabaigos
+noprojects = Projektų nėra.
+openprojects = Vykdomi projektai
 project = Projektas
 projects = Projektai
-projectadministration = Projektų administravimas
+projectadministration = Projekto administratorius
 projectname = Projekto pavadinimas
-projectwasadded = Projektas pridėtas
-projectwasclosed = Projektas uždarytas
-projectwasdeleted = Projektas pašalintas
-projectwasedited = Projektas redaguotas
-projectwasopened = Projektas pradėtas
+projectwasadded = Sukūrimo data
+projectwasclosed = Baigimo data
+projectwasdeleted = Projektas buvo ištrintas
+projectwasedited = Projektas buvo redaguotas
+projectwasopened = Projektas atidarytas
 report = Ataskaita
-start = Pradžia
+start = Pradėta
+
+{* Task / Tasklist *}
+
 addtask = Pridėti užduotį
 addtasklist = Pridėti užduočių sąrašą
 assign = Priskirti
-deletetasks = Šalinti užduotį
-done = Atlikta
-donetasklists = Pabaigtas užduočių sąrašas
-donetasks = Atliktos užduotys
-edittask = Redaguoti užduotį
-edittasklist = Redaguoti užduočių sąrašą
-latetasks = Vėliausia užduotis
+deletetasks = Ištrinti užduotis
+done = Ivykdyta
+donetasklists = Baigti užduočių sąrašai
+donetasks = Baigtos užduotys
+edittask = Redaguoti
+edittasklist = Redaguoti
+latetasks = Vėluojančios užduotys
 mytasks = Mano užduotys
-newtasks = Naujos užduotys
-notasklists = 
-notasks = Nėra laukiančių užduočių
+newtasks = Nauja užduotis
+notasklists = Užduočių sąrašų nėra. Sukurkite vieną dabar.
+notasks = Laikiančių užduočių nėra
 openprogress = Atvira
-status = Būsena
+status = Statusas
 task = Užduotis
 tasklist = Užduočių sąrašas
 tasklists = Užduočių sąrašai
 tasklistwasadded = Užduočių sąrašas pridėtas
-tasklistwasclosed = Užduočių sąrašas baigtas
-tasklistwasdeleted = Užduočių sąrašas pašalintas
-tasklistwasedited = Užduočių sąrašas redaguotas
-tasklistwasopened = Užduočių sąrašas atviras
+tasklistwasclosed = Užduočių sąrašas uždarytas
+tasklistwasdeleted = Užduočių sąrašas ištrintas
+tasklistwasedited = Užduočių sąrašas paredaguotas
+tasklistwasopened = Užduočių sąrašas atidarytas
 tasks = Užduotys
 taskwasadded = Užduotis pridėta
 taskwasassigned = Užduotis priskirta
-taskwasclosed = Užduotis uždaryta
+taskwasclosed = Užduotis baigta
 taskwasdeassigned = Užduotis atskirta
-taskwasdeleted = Užduotis pašalinta
-taskwasedited = Užduotis redaguota
-taskwasopened = Užduotis atvira
+taskwasdeleted = Užduotis ištrinta
+taskwasedited = Užduotis buvo redaguota
+taskwasopened = Užduotis atidaryta
 text = Tekstas
 todaytasks = Šiandienos užduotys
+
+{* Milestone *}
+
 addmilestone = Pridėti etapą
-donemilestones = Atlikti etapai
-due = Terminas
+donemilestones = Įvykdyti etapai
+due = Iki
 editmilestone = Redaguoti etapą
 end = Pabaiga
-latestones = Naujausi etapai
+latestones = Vėluojantys etapai
 milestone = Etapas
 milestones = Etapai
 milestonewasadded = Etapas pridėtas
 milestonewasclosed = Etapas uždarytas
-milestonewasdeleted = Etapas pašalintas
-milestonewasedited = Etapas redaguotas
-milestonewasopened = Etapas atviras
+milestonewasdeleted = Etapas ištrintas
+milestonewasedited = Etapas buvo redaguotas
+milestonewasopened = Etapas atidarytas
 newmilestones = Nauji etapai
 todaystones = Šiandienos etapai
+
+{* Messages *}
+
 addmessage = Pridėti žinutę
-answer = Atsakymas
+answer = Atsakyti
 editmessage = Redaguoti žinutę
 message = Žinutė
 messages = Žinutės
-messagewasadded = Žinutė pridėta
-messagewasdeleted = Žinutė oašalinta
-messagewasedited = Žinutė redaguota
-messagewasaddedsubject = 
-messagewasaddedtext = 
-mymessages = Namo žinutės
+messagewasadded = Žinutė pridėta 
+messagewasdeleted = Žinutė buvo ištrinta
+messagewasedited = Žinutė buvo redaguota
+messagewasaddedsubject = Pranešimas: Žinutė pridėta 
+messagewasaddedtext = pridėta žinutė:
+mymessages = Mano žinutės
 replies = Atsakymai
 reply = Atsakyti
-replywasadded = Atsakymas pridėtas
-replywasdeleted = Atsakymas pašalintas
-replywasedited = Atsakymas redaguotas
+replywasadded = Atsakyta
+replywasdeleted = Atsakymas buvo ištrintas
+replywasedited = Atsakymas buvo paredaguotas
 title = Pavadinimas
-mailfrommail = 
-mailfromname = 
-mailmethod = 
-mailserver = 
-mailusername = 
-mailpass = 
-profileaddedsubject = 
-profileaddedtext = 
-profilepass = 
-profileusername = 
-hello = 
-projectassignedsubject = 
-projectassignedtext = 
-taskassignedsubject = 
-taskassignedtext = 
-addfile = Pridėt bylą
+
+{* eMails *}
+
+mailfrommail = Siuntėjo el. paštas
+mailfromname = Siuntėjas
+mailmethod = Siuntimo metodas
+mailserver = Serveris
+mailusername = SMTP vartotjo vardas
+mailpass = SMTP slaptažodis
+profileaddedsubject = Pranešimas – Varotojas sukurtas
+profileaddedtext = Naujo vartotojo profilis tinklalapyje buvo sėkmingai sukurtas. Saugumo sumetimais prašome pakeisti savo slaptažodį, po pirmojo prisijungimo!
+profilepass = Slaptažodis
+profileusername = Vartotojo vardas
+hello = Sveiki
+projectassignedsubject = Pranešimas – Priskirtas projektas
+projectassignedtext = Jums buvo priskirtas naujas projektas:
+taskassignedsubject = Pranešimas – Užduoties priskyrimas
+taskassignedtext = Jums buvo priskirta nauja užduotis:
+
+{* Files *}
+
+addfile = Pridėti bylą
 addfiles = Pridėti bylas
-addfolder = 
-attachfile = Prisegti bylą
-attachfiles = Prisegti bylas
-count = Kiekis
-directories = 
+addfolder = Pridėti katalogą
+attachfile = Prikabinti bylą
+attachfiles = Prikabinti bylas
+count = Skaičius
+directories = Direktorijos
 directory = Direktorija
 editfile = Redaguoti bylą
-editfolder = 
+editfolder = Redaguoti katalogą
 file = Byla
 files = Bylos
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = Pranešimas – pridėta byla
+filecreatedtext = prie vieno iš Jūsų projektų buvo pridėta byla.
 filewasadded = Byla pridėta
-filewasdeleted = Byla pašalinta
-filewasedited = Byla redaguota
-folder = 
-folderwasadded = 
-folderwasdeleted = 
-folderwasedited = 
-managefolders = 
+filewasdeleted = Byla buvo ištrinta
+filewasedited = Byla buvo redaguota
+folder = Katalogas
+folderwasadded = Katalogas pridėtas
+folderwasdeleted = Katalogas buvo ištrintas
+folderwasedited = Katalogas buvo redaguotas
+managefolders = Tvarkyti katalogus
 maxsize = Maksimalus dydis
-rootdir = 
-advancedsearch = Platesnė paieška
-didyoumean = Gal tai
-gosearch = Pirmyn!
+parent = Pagrindinė direktorija
+rootdir = Pagrindinė direktorija
+visibility = Gali matyti
+
+{* Search *}
+
+advancedsearch = Išplėstinė paieška
+didyoumean = Gal ieškojote
+gosearch = Ieškoti!
 newsearch = Nauja paieška
-noresults = Nieko nerasta.
-refinesearch = Tikslinti paiešką
-results = Rezultatai
-resultsfor = Rezultatai
+noresults = Jūsų paieška neatitiko jokių rezultatų.
+refinesearch = Patikslinkite paiešką
+results = Paieškos rezultatai
+resultsfor = Rezultatai pagal
 search = Paieška
 searchfor = Ieškoti
 searching = Ieškoma...
-searchitem = Paieškos elemtas
-ar = 
-bg = 
-ca = 
-zh = 
-cs = Čekiškai
-da = Daniškai
-de = Vokiškai
-en = Angliškai
-es = Ispaniškai
-gl =
-fi = 
-fr = Prancūziškai
-hu = 
-it = Itališkai
-ja = Japoniškai
-lt = Lietuviškai
-nl = 
-nn =
-pl = Lenkiškai
-pt = 
-pt_br = Portugališkai
-ro = Rumuniškai
-sr = 
-ru = Rusiškai
-se = 
-sk = 
-tr = 
-uk = 
-calendar = 
-dateformat = 
-timezone = 
-prevmonth = buvęs mėnesis
-nextmonth = sekantis mėnesis
+searchitem = Paieškos punktai
+
+{* Languages *}
+
+al = Albanų
+ar = Arabų
+bg = Bulgarų
+ca = Catalonų
+cs = Čekų
+da = Danų
+de = Vokiečių
+el = Graikų
+en = Anglų
+es = Ispanų
+fa = Farsi
+fi = Suomių
+fr = Prancūzų
+gl = Galų
+hr =
+hu = Vengrų
+it = Italų
+ja = Japonų
+lt = Lietuvių
+nl = Olandų
+nn = Norvegų
+pl = Lenkų
+pt = Portugalų
+pt_br = Brazilų
+ro = Romunų
+ru = Rusų
+se = Švedų
+sk = Slovakų
+sr = Serbų
+tr = Turkų
+uk = Ukrainų
+zh = Kinų
+
+{* Calendar *}
+
+calendar = Kalendorius
+dateformat = Datos formatas
+timezone = Laiko zona
+prevmonth = buvęs mėnuo
+nextmonth = sekantis mėnuo
 monday = Pir
 tuesday = Ant
 wednesday = Tre
@@ -242,118 +282,138 @@ september = Rugsėjis
 october = Spalis
 november = Lapkritis
 december = Gruodis
-accessdenied = Priega uždrausta
-confirmdel = Ar tikrai pašalinti šį elementą ?\nVeiksmas nebeatsatomas.
+
+{* Errors *}
+
+accessdenied = Prieiga uždrausta
+confirmdel = Tikrai norite ištrinti?\nVeiksmas negalės būti atšauktas.
 error = Klaida
-goback = Prašone grįžti atgal ir ištaisyti klaidas.
-nopermission = Nėra leidimo
-notyourproject = Jūs nebepriklausote šiam projektui.
-wrongfield = Prašome įvesti teisingą reikšmę \"%FIELDNAME%\"
+goback = Gryžkite atgal ir ištaisykite klaidas.
+nopermission = Prieiga uždrausta
+notyourproject = Jūs nesate prisirtas prie šio projekto.
+wrongfield = Prašome įvesti teisingą reikšmę: \"%FIELDNAME%\".
 wrongfields = Prašome įvesti teisingas reikšmes:\n\n
-wrongselect = Prašome pasirinti teisingą reikšmę \"%FIELDNAME%\"
-createadmin = 
-clickcontinue = Spauskite "tęsti" norėdami vyktydi įdiegimą.
+wrongselect = Pasirinkite teisingą reikšmę: \"%FIELDNAME%\".
+
+{* Installation *}
+
+createadmin = Sukurkite pirmą vartotoją. Šis vartotojas bus administratorius ir negalės būti pašalintas.
+clickcontinue = Paspauskite "Tęsti" norėdami įdiegti programą.
 continue = Tęsti
-correctfaults = Prašome ištaisyti trūkumus.
+correctfaults = Prašome ištaisyti klaidas.
 db = Duomenų bazė
-dbhost = Duomenų bazės serveris
+dbhost = Serveris
 dbname = Duomenų bazės pavadinimas
 dbpass = Duomenų bazės slaptažodis
-dbuser = Duomenų bazės naudotojas
-insertdbaccessdata = Prošome įvesti duomenų bazės prisijungimo duomenis.
+dbuser = Duomenų bazės vartotojo vardas
+insertdbaccessdata = Įveskite prieigos duomenys prie duomenų bazės čia.
 installcollabtive = Įdiegti Collabtive
-installerchecksconditions = Įdiegimo vedlys patikrins ar visos sąlygos tinkamos įdiegimui.
-installerconditions = Įdiegimo sąlygos
-installerlanguage = Įdiegimo veldlys
-installstep = 
-installsuccess = 
+installerchecksconditions = Programa patikrins, ar visi reikalavimai atitinka specifikaciją.
+installerconditions = Reikalavimai programos įdiegimui
+installerlanguage = Diegimo kalba
+installstep = Žingsnis
+installsuccess = Diegimas sėkmingai užbaigtas
 iswritable = įrašoma
-makedirwritable = 
-makefilewritable = 
-phpversion = 
-proceedtologin = 
+makedirwritable = Nustatykite katalogo permisijas.
+makefilewritable = Nustatykite bylos permisijas.
+phpversion = Serveryje turi būti įdiegta PHP 5.1 versija.
+proceedtologin = Eiti į prisijungimo puslapį.
+mb_string_enabled = mb_string plėtinys įjungtas
+enable_mb_string = Įjunkite mb_string plėtinį
+
+{* Timetracker *}
+
 comment = Komentaras
-edittimetracker = Redaguoti laikmačio įrašą
-endafterstart = Pabaiga turi būt po pradžios.
-ended = Pasibaigė
+edittimetracker = Redaguoti laikos stebėjimo įrašą
+endafterstart = Pabaigos laikas turi būti vėlesnis nei pradžios laikas.
+ended = Pabaigta
 filter = Filtras
 filterreport = Filtruoti ataskaitas
 hours = Valandos
-inserttime = Įterpti dabartini laiką
-noassociatedtask = Nėra susijusių užduočių
-reporting = Ataskaitos
+inserttime = Įvesti dabartinį laiką
+noassociatedtask = Nėra priskirtų užduočių
+report = Ataskaita
+reporting = Ataskaita
 started = Pradėta
 totalhours = Viso valandų
 timetable = Tvarkaraštis
-timetracker = Laikmatis
-timetrackeradded = 
-add = 
-addrole = 
-delete = Šalinti
-delrole = 
-edit = Readaguoti
-editrole = 
-permissionread = 
+timetracker = Laiko stebėjimas
+timetrackeradded = Laikas pridėtas
+
+{* Roles / Permissions *}
+
+add = Pridėti
+addrole = Pridėti rolę
+delete = Trinti
+delrole = Trinti rolę
+edit = Redaguoti
+editrole = Redaguoti rolę
+permissionread = Skaityti
 permissions = Leidimai
-permissionswereedited = Buvo redaguoti leidimai
-role = 
-roleadded = 
-roleedited = 
-roles = 
+permissionswereedited = Leidimai buvo pakoreguoti
+role = Rolė
+roleadded = Rolė buvo pridėta
+roleedited = Rolė buvo paredaguota
+roles = Rolės
+
+{* Miscellaneous *}
+
 active = Aktyvus
 activity = Aktyvumas
 action = Veiksmas
 actions = Veiksmai
 addbutton = Pridėti
-added = pridėta
-administration = Administravimas
-assigned = 
-attachbutton = 
-by = 
+added = pridėtas
+administration = Administracija
+assigned = priskirta
+attachbutton = Prisegti
 cancel = Atšaukti
-chat = 
-chooseone = Prašome pasirinkti
+chat = Pokalbiai
+chooseone = Pasirinkite iš sąrašo
 close = Uždaryti
-closed = uždaryta
+closed = uždrytas
 day = Diena
-dayslate = Vėluojama dienų
-daysleft = Liko dienų
-deassigned = 
-deleted = pašalinta
-desktop = Darbastalis
-edited = redaguota
+dayslate = dienas vėluoja
+daysleft = dienos (-a)
+deassigned = atskirtas
+deleted = ištrintas
+desktop = Darbalaukis
+edited = redaguotas
 excelexport = Excel
 export = Eksportas
-favicon = Ikona
+favicon = Favicon'a
+general = Bendras
 help = Pagalba
 icalexport = iCal
-import = 
-importsuccess = 
+import = Importuoti iš Basecamp
+importsuccess = Importas sėkmingas
 inactive = Neaktyvus
 no = Ne
+notify = Informuoti
 objoff = Neaktyvus
 objon = Aktyvus
-on = Sukurta
-or = ar
-open = Atvira
-opened = atidaryta
-overview = Skydelis
+on = Sukurtas
+or = arba
+open = Atviras
+opened = atvertas
+overview = Valdymo skydelis
 pdfexport = PDF
 private = Privatus
-public = Viešas
+public = Bendras
 rssfeed = RSS
-rsspass = 
-rssuser = 
+rsspass = RSS slaptažodis
+rssuser = RSS vartotojo vardas
 send = Siųsti
-settings = Nuostatos
-settingschanged = Nuostatos pakeistos
-settingsedited = 
+settings = Nustatymai
+settingschanged = Nustatymai pakeisti
+settingsedited = NUstatymai buvo redaguoti
 showall = Rodyti visus
+started = Pradėta
 subtitle = Paantraštė
-systemadministration = Sistemos admistravimas
-systemdefault = Įprasta
-systemsounds = Sistemos garsai
-tags = Žymės
+systemadministration = Sistemos administravimas
+systemdefault = Pagrindinis
+systemsounds = Garsai
+tags = Žymos
 was = buvo
 were = buvo
 yes = Taip
