Translations completed: Chinese, Polish, Finnish. Thanks to our contributors Harri Vesanen, Qi Jie, and Piotr Grzeslak

--- a/language/zh/lng.conf
+++ b/language/zh/lng.conf
@@ -30,10 +30,11 @@ male = 男
 members = 成员
 myaccount = 我的账号
 newpass = 新密码
+none = 空
 oldpass = 旧密码
 password = 密码
 phone = 联系电话
-rate = 每小时薪水
+rate = 薪水/H
 repeatpass = 请重复密码
 state = 状态
 stayloggedin = 始终登陆
@@ -54,6 +55,7 @@ zip = 邮政编码
 access = 访问
 addproject = 添加项目
 assignto = 分配任务给
+budget = 预算
 closedprojects = 关闭的项目
 deassign = 重新分配
 description = 描述
@@ -85,7 +87,7 @@ edittasklist = 编辑任务列表
 latetasks = 最新项目
 mytasks = 我的任务
 newtasks = 新任务
-notasklists =
+notasklists = 未发现任务列表，请创建一个任务列表
 notasks = 没有未决任务
 openprogress = 打开
 status = 状态
@@ -130,8 +132,8 @@ messages = 所有消息
 messagewasadded = 已添加消息
 messagewasdeleted = 已删除消息
 messagewasedited = 已编辑消息
-messagewasaddedsubject = 
-messagewasaddedtext = 
+messagewasaddedsubject = Collabtive提示：消息已添加
+messagewasaddedtext = 以下消息被添加：
 mymessages = 我的所有消息
 replies = 所有回复
 reply = 回复
@@ -151,7 +153,7 @@ profilepass = 密码
 profileusername = 用户名
 hello = 你好
 projectassignedsubject = Collabtive提示 – 已成功布置项目
-projectassignedtext =
+projectassignedtext = 已分配你一个新项目
 taskassignedsubject = Collabtive提示 – 已成功布置任务
 taskassignedtext = 系统给你分配了一个新的任务:
 addfile = 添加文件
@@ -166,8 +168,8 @@ editfile = 编辑文件
 editfolder = 编辑文件夹
 file = 文件
 files = 所有文件
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = 创建的文件主题
+filecreatedtext = 创建的文本文件
 filewasadded = 文件已添加
 filewasdeleted = 文件已删除
 filewasedited = 文件已成功编辑
@@ -177,7 +179,9 @@ folderwasdeleted = 文件夹已删除
 folderwasedited = 文件夹已成功编辑
 managefolders = 管理文件夹
 maxsize = 上限大小
+parent = 当前目录
 rootdir = 根目录
+visibility = 以下可见
 advancedsearch = 高级数据
 didyoumean = 你的意思是
 gosearch = 搜索!
@@ -190,34 +194,38 @@ search = 搜索
 searchfor = 搜索
 searching = 搜索中...
 searchitem = 搜索的项目
-ar =
-bg =
-ca =
+ar = 阿拉伯语
+al = 阿尔巴尼亚语
+bg = 保加利亚语
+ca = 加泰罗尼亚语
 cn = 简体中文
-cz =
-da =
-de =
-en =
-es =
-es_gl =
-fi =
-fr =
-hu =
-it =
-jp =
-lt =
-nl =
-nor =
-pl =
-pt =
-pt_br =
-ro =
-rs =
-ru =
-se =
-sk =
-tr =
-ua =
+cs = 捷克语
+da = 丹麦语
+de = 德语
+el = 希腊语
+en = 英语
+es = 西班牙语
+fa = 波斯语
+fi = 芬兰语
+fr = 法语
+gl = 加利西亚语
+hu = 匈牙利语
+it = 意大利语
+ja = 日语
+lt = 立陶宛语
+nl = 荷兰语
+nn = 挪威语
+pl = 波兰语
+pt = 葡萄牙语
+pt_br = 葡萄牙语 (巴西)
+ro = 罗马尼亚语
+ru = 俄语
+se = 瑞典语
+sk = 斯洛伐克语
+sr = 塞尔维亚语
+tr = 土耳其语
+uk = 乌克兰语
+zh = 中文
 calendar = 日历
 dateformat = 日期格式
 timezone = 时区
@@ -272,7 +280,8 @@ makedirwritable = 请确保此目录可写.
 makefilewritable = 请确保此文件可写.
 phpversion = 你需要PHP 5.1或以上版本来运行Collabtive。
 proceedtologin = 即将转向登陆页面.
-comment = 评论
+mb_string_enabled = mb_string 扩展已加载
+enable_mb_string = 请启用 mb_string 扩展
 edittimetracker = 编辑时间追踪器日志
 endafterstart = 结束日期必需晚于开始日期.
 ended = 结束时间
@@ -281,7 +290,7 @@ filterreport = 过滤报表
 hours = 时间（小时）
 inserttime = 输入当前时间
 noassociatedtask = 没有与此相关的任务
-reporting = Reporting
+reporting = 报告
 started = 开始时间
 totalhours = 总共时间（小时）
 timetable = 时间表
@@ -331,6 +340,7 @@ import = 从Basecamp导入
 importsuccess = 成功导入
 inactive = 未激活
 no = 否
+notify = 通知
 objoff = 停止
 objon = 进行中
 on = 已创建
@@ -349,6 +359,7 @@ settings = 设置
 settingschanged = 设置已变更
 settingsedited = 设置已成功编辑
 showall = 显示全部
+started = 已经启动的
 subtitle = 结束时间
 systemadministration = 系统管理
 systemdefault = 默认
@@ -358,3 +369,5 @@ was = 是
 were = 是
 yes = 是
 zipexport = ZIP
+budget = 预算
+neverdue = 永不过期
