--- a/language/fi/lng.conf
+++ b/language/fi/lng.conf
@@ -30,6 +30,7 @@ male = Mies
 members = Jäsenet
 myaccount = käyttäjätilini
 newpass = Uusi salasana
+none = Ei yhtään
 oldpass = Vanha salasana
 password = Salasana
 phone = Puhelin
@@ -51,9 +52,13 @@ userwasedited = Käyttäjä muokattiin
 vcardexport = Osoitekortin vienti (vCard)
 welcomeback = Tervetuloa takaisin
 zip = Postinumero
+
+{* Projekti *}
+
 access = Pääsy
 addproject = Lisää projekti
 assignto = Siirrä
+budget = budjetti
 closedprojects = Suljetut projektit
 deassign = Poista
 description = Kuvaus
@@ -73,6 +78,9 @@ projectwasedited = Projektia muokattu
 projectwasopened = Projekti avattu
 report = Raportti
 start = Aloitus
+
+{* Tehtävät / Tehtävälistat *}
+
 addtask = Lisää tehtävä
 addtasklist = Lisää tehtävälista
 assign = Nimitä
@@ -85,7 +93,7 @@ edittasklist = Muokkaa tehtävälistaa
 latetasks = Myöhässäolevat tehtävät
 mytasks = Omat tehtävät
 newtasks = Uudet tehtävät
-notasklists =
+notasklists = Tehtävälistaa ei löytynyt. Luo tehtävälista.
 notasks = Ei avoimia tehtäviä
 openprogress = Avoin
 status = Tila
@@ -107,6 +115,9 @@ taskwasedited = Tehtävää muokattu
 taskwasopened = Tehtävä avattu
 text = Teksti
 todaytasks = Tämän päivän tehtävät
+
+{* Tavoitteet *}
+
 addmilestone = Lisää tavoite
 donemilestones = Saavutetut tavoitteet
 due = Takaraja
@@ -122,6 +133,9 @@ milestonewasedited = Tavoitetta muokattu
 milestonewasopened = Tavoite asetettu
 newmilestones = Uusi tavoite
 todaystones = Tämän päivän tavoitteet
+
+{* Viestit *}
+
 addmessage = Lisää viesti
 answer = Vastaa
 editmessage = Muokkaa viestiä
@@ -130,8 +144,8 @@ messages = Viestit
 messagewasadded = Viesti lisätty
 messagewasdeleted = Viesti poistettu
 messagewasedited = Viestiä muokattu
-messagewasaddedsubject = 
-messagewasaddedtext = 
+messagewasaddedsubject = MAALÄMPÖKESKUS INTRANETIN ilmoitus: Viesti lisätty
+messagewasaddedtext = Seuraava viesti lisätty:
 mymessages = Omat viestini
 replies = Vastaukset
 reply = Vastaa
@@ -139,21 +153,27 @@ replywasadded = Vastaus lisätty
 replywasdeleted = Vastaus poistettu
 replywasedited = Vastausta muokattu
 title = Aihe
+
+{* Sähköpostit *}
+
 mailfrommail = Lähettäjän sähköpostiosoite
 mailfromname = Lähettäjän nimi
 mailmethod = Lähetystapa
 mailserver = Palvelin
 mailusername = SMTP käyttäjätunnus
 mailpass = SMTP salasana
-profileaddedsubject = Collabtive ilmoitus – Uusi käyttäjäprofiilisi
+profileaddedsubject = MAALÄMPÖKESKUS INTRANETIN ilmoitus: Uusi käyttäjäprofiili
 profileaddedtext = sinulle on luotu uusi käyttäjäprofiili.
 profilepass = Salasana
 profileusername = Käyttäjätunnus
 hello = Hei
-projectassignedsubject = Collabtiven ilmoitus – Projekti nimitetty
+projectassignedsubject = MAALÄMPÖKESKUS INTRANETIN ilmoitus: Projekti nimitetty
 projectassignedtext = sinut on nimetty uuteen projektiin:
-taskassignedsubject = Collabtiven ilmoitus – Tehtävä nimitetty
+taskassignedsubject = MAALÄMPÖKESKUS INTRANETIN ilmoitus: Tehtävä nimitetty
 taskassignedtext = sinulle on nimetty uusi tehtävä:
+
+{* Tiedostot *}
+
 addfile = Lisää tiedosto
 addfiles = Lisää tiedostot
 addfolder = Lisää kansio
@@ -166,8 +186,8 @@ editfile = Muokkaa tiedostoa
 editfolder = Muokkaa kansiota
 file = Tiedosto
 files = Tiedostot
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = MAALÄMPÖKESKUS INTRANETIN ilmoitus: Tiedosto lisätty
+filecreatedtext = Tiedosto lisätty projektiisi.
 filewasadded = Tiedosto lisätty
 filewasdeleted = Tiedosto poistettu
 filewasedited = Tiedostoa muokattu
@@ -177,7 +197,13 @@ folderwasdeleted = Kansio poistettu
 folderwasedited = Kansiota muokattu
 managefolders = Hallitse kansioita
 maxsize = Suurin sallittu koko
+parent = Yläkansio
 rootdir = Juurihakemisto
+visibility = Näkyy
+
+{* Etsi *}
+
+
 advancedsearch = Tarkennettu haku
 didyoumean = Tarkoititko
 gosearch = Hae
@@ -190,34 +216,43 @@ search = Haku
 searchfor = Hae
 searching = Haetaan...
 searchitem = Hae kohdetta
+
+{* Kielet *}
+
+al = albania
 ar = arabia
 bg = bulgaria
 ca = katalaani
-zh = kiina
 cs = tsekki
 da = tanska
 de = saksa
+el = kreikka
 en = englanti
 es = espanja
-gl = galego
+fa = Farsi
 fi = suomi
 fr = ranska
+gl = galego
 hu = unkari
 it = italia
 ja = japani
 lt = liettua
 nl = hollanti
-nn =
+nn = norja
 pl = puola
 pt = portugali
 pt_br = portugali (Brasilia)
 ro = romania
-sr = serbi
 ru = venäjä
 se = ruotsi
 sk = slovakki
+sr = serbi
 tr = turkki
 uk = ukraina
+zh = kiina
+
+{* Kalenteri *}
+
 calendar = Kalenteri
 dateformat = Päiväys
 timezone = Aikavyöhyke
@@ -242,6 +277,9 @@ september = Syyskuu
 october = Lokakuu
 november = Marraskuu
 december = Joulukuu
+
+{* Virheet *}
+
 accessdenied = Pääsy kielletty
 confirmdel = Haluatko varmasti poistaa kohteen?\nPoistoa ei pysty perumaan.
 error = Virhe
@@ -251,6 +289,9 @@ notyourproject = Sinua ei ole nimetty tähän projektiin.
 wrongfield = Syötä oikea tieto kenttään \"%FIELDNAME%\".
 wrongfields = Syötä oikeat tiedot kenttiin:\n\n
 wrongselect = Valitse oikea tieto kenttään \"%FIELDNAME%\".
+
+{* Asennus *}
+
 createadmin = Luo ensimmäinen käyttäjä. Käyttäjästä tehdään järjestelmänvalvoja jota ei voi poistaa.
 clickcontinue = Klikkaa "jatka" jatkaaksesi asennusta.
 continue = Jatka
@@ -272,21 +313,30 @@ makedirwritable = Anna kirjoitusoikeudet hakemistoon.
 makefilewritable = Anna kirjoitusoikeudet tiedostoon.
 phpversion = Tarvitset vähintään PHP version 5.1 käyttääksesi Collabtivea.
 proceedtologin = Jatka kirjautumissivulle.
+mb_string_enabled = mb_string lisäosa ladattu
+enable_mb_string = Ota käyttöön mb_string lisäosa
+
+{* Ajanhallinta *}
+
 comment = Kommentti
 edittimetracker = Muokkaa ajanhallinnan merkintää
 endafterstart = Lopetus ajan pitää olla aloitusajan jälkeen.
 ended = Lopetettu
 filter = Suodatin
-filterreport = Suodatinraportti
+filterreport = Suodatettu raportti
 hours = Tunnit
 inserttime = Syötä nykyinen aika
 noassociatedtask = Ei tähän liittyvää tehtävää
+report = Raportti
 reporting = Raportointi
 started = Aloitettu
 totalhours = Kokonaistunnit
 timetable = Aikataulu
 timetracker = Ajanhallinta
 timetrackeradded = Aika lisätty
+
+{* Roolit / Oikeudet *}
+
 add = Lisää
 addrole = Lisää rooli
 delete = Poista
@@ -297,9 +347,12 @@ permissionread = Luku
 permissions = Oikeudet
 permissionswereedited = Oikeuksia on muutettu
 role = Rooli
-roleadded = 
-roleedited = 
+roleadded = Rooli lisätty
+roleedited = Roolia muokattu
 roles = Roolit
+
+{* Sekalaiset *}
+
 active = Aktiivinen
 activity = Toiminta
 action = Tapahtuma
@@ -311,7 +364,7 @@ assigned = nimetty
 attachbutton = Liitä
 by = Lähettäjä
 cancel = Peruuta
-chat = 
+chat = Keskustelu
 chooseone = Valitse
 close = Sulje
 closed = suljettu
@@ -323,7 +376,7 @@ deleted = poistetut
 desktop = Työpöytä
 edited = muokattu
 excelexport = Excel
-export = Vie
+export = Lataa
 favicon = Favicon
 help = Tuki
 icalexport = iCal
@@ -331,6 +384,7 @@ import = Tuo Basecamp:stä
 importsuccess = Tuonti onnistui
 inactive = Ei käytössä
 no = Ei
+notify = Ilmoitus
 objoff = Ei käytössä
 objon = Käytössä
 on = Luotu
@@ -349,12 +403,14 @@ settings = Asetukset
 settingschanged = Asetuksia muutettu
 settingsedited = Asetuksia muokattu
 showall = Näytä kaikki
+started = Aloitettu
 subtitle = Tekstitys
 systemadministration = Järjestelmänhallinta
 systemdefault = Oletus
 systemsounds = Järjestelmän äänet
-tags = Tagit
+tags = Tags 
 was = oli
 were = oli
 yes = Kyllä
 zipexport = ZIP
+neverdue = Ei takarajaa
