--- a/language/pl/lng.conf
+++ b/language/pl/lng.conf
@@ -34,14 +34,14 @@ none = Nikt
 oldpass = Stare hasło
 password = Hasło
 phone = Telefon
-rate = Tempo
+rate = Stawka godzinowa
 repeatpass = Powtórz hasło
 state = Stan
 stayloggedin = Zapamiętaj mnie
 template = Szablon
 url = URL
 user = Użytkownik
-useradministration = Admin
+useradministration = Zarządzanie użytkownikami
 userprofile = Profil użytkownika
 usersonline = Zalogowani
 userwasadded = Użytkownik został dodany
@@ -65,6 +65,7 @@ description = Opis
 editproject = Edytuj projekt
 myprojects = Moje projekty
 name = Nazwa
+neverdue = Bez terminu zakończenia
 noprojects = Nie masz przypisanych projektów
 openprojects = Otwarte projekty
 project = Projekt
@@ -228,6 +229,7 @@ de = Niemiecki
 el = Grecki
 en = Angielski
 es = Hiszpański
+fa = Farsi
 fi = Fiński
 fr = Francuski
 gl = Galicyjski
